--- a/frontend/src/Pages/Admin/style.css
+++ b/frontend/src/Pages/Admin/style.css
@@ -1,3 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Press Start 2P';
+    color: #FFFFFF;
+    text-align: center;
+}
+
+body {
+    background-color: #000000;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='42' height='58' viewBox='0 0 42 58'%3E%3Cg fill='%23dddcdd' fill-opacity='0.23'%3E%3Cpath fill-rule='evenodd' d='M12 18h12v18h6v4H18V22h-6v-4zm-6-2v-4H0V0h36v6h6v36h-6v4h6v12H6v-6H0V16h6zM34 2H2v8h24v24h8V2zM6 8a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm8 0a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm8 0a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm8 0a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm0 8a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm0 8a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm0 8a2 2 0 1 0 0-4 2 2 0 0 0 0 4zM2 50h32v-8H10V18H2v32zm28-6a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm0-8a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm0-8a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm0-8a2 2 0 1 0 0 4 2 2 0 0 0 0-4z'/%3E%3C/g%3E%3C/svg%3E");
+}
+
 body {
   margin: 0;
 }
@@ -9,8 +25,8 @@ body {
   height: 40px;
 }
 .head {
+  padding: 20px;
   display: flex;
-  align-items: center;
 }
 
 nav .nav {
@@ -72,12 +88,14 @@ table {
   border-spacing: 2px;
 }
 th {
+  font-size: 10px;
   background-color: #333;
   color: #fff;
   padding: 10px;
 }
 td {
   background-color: rgb(72, 72, 72);
+  font-size: 10px;
 }
 td div {
   display: flex;
@@ -92,12 +110,14 @@ button {
   color: #fff;
   font-weight: bold;
   cursor: pointer;
+  font-size: 10px;
+  margin: 0 5px ;
 }
 .delete {
-  background-color: #e91e63;
+  background-color: #e91e1e;
 }
 .edit {
-  background-color: #03a9f4;
+  background-color: #091f29;
 }
 td img {
   overflow: hidden;
